tests/baselines/reference/zeroWidthJoinerES3.errors.txt
tests/cases/compiler/zeroWidthJoinerES3.ts(2,17): error TS1127: Invalid character.


==== tests/cases/compiler/zeroWidthJoinerES3.ts (1 errors) ====
    // identifier‍\u200DWithZWJ
    const identifier‍WithZWJ = "";
                    
!!! error TS1127: Invalid character.